--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -5,17 +5,20 @@
     width: 100%;
     border: 1px solid #DDDDDD;
     border-radius: 4px;
-    position:relative
 }
 /* the search button */
 button{
     font-size:18px;
     color:  #FFFFFF;
     height: 48px;
+    margin:0;
     background-color: #FF5A5F;
     border:none;
     border-radius: 4px;
-    position:absolute;
+    position:relative;
+    left: 70%;
+    top: 20%;
+    margin-right: 30px;
     width:20%;
 }
 button :hover{
